<resources>
    <string name="app_name">PopularMovies</string>
    <string name="vote_average_append">/ 10</string>
    <string name="movie_poster">Movie poster</string>
    <string name="release_date">Release date</string>
    <string name="average_vote">Average vote</string>
    <string name="votes">Votes</string>
    <string name="getting_movies">Getting movies</string>
    <string name="getting_movie_details">Getting movie details</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="vote_average_out_of_ten">/ 10</string>
    <string name="no_internet_msg">You have no internet connection</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="undo">UNDO</string>
    <string name="trailers">see trailers</string>
    <string name="description">read description</string>
    <string name="favorite">set favorite</string>
    <string name="read_reviews">read reviews</string>
    <string name="movie_overview_long">Set in a post-apocalyptic world, young Thomas is deposited in a community of boys after his memory is erased, soon learning they\'re all trapped in a maze that will require him to join forces with fellow “runners” for a shot at escape.</string>
    <string name="trailers_title">Trailers</string>
    <string name="getting_trailers">Getting trailers</string>
    <string name="trailer_of_the_movie">Trailer of the movie</string>
    <string name="no_trailers_found">No trailers found</string>
    <string name="trailer_thumbnail_play_icon">Trailer thumbnail play icon</string>
    <string name="reviews_title">Reviews</string>
    <string name="getting_reviews">Getting reviews</string>
    <string name="author">Author</string>
    <string name="by">by</string>
    <string name="no_reviews_found">No reviews found</string>
    <string name="long_review_content">Excellent movie. Best of the trilogy. Lovely music. Nolan is a genius. So is Heath Ledger. Excellent movie. Best of the trilogy. Lovely music. Nolan is a genius. So is Heath Ledger.</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_string">favorites</string>
    <string name="loading_favorites">Loading favorites…</string>
    <string name="title_activity_settings">settings</string>
    <string name="action_settings">Settings</string>

    <!-- Settings strings -->
    <string name="pref_favorite_sort_label">Favorites</string>
    <string name="pref_fav_sort_key" translatable="false">sort-by</string>
    <string name="pref_fav_sort_title_value" translatable="false">title</string>
    <string name="pref_fav_sort_date_value" translatable="false">release-date</string>
    <string name="pref_fav_sort_avgVote_value" translatable="false">average-vote</string>
    <string name="pref_fav_sort_title_label">Title</string>
    <string name="pref_fav_sort_date_label">Release date</string>
    <string name="pref_fav_sort_avgVote_label">Average vote</string>
    <string name="settings_sort_section_title">Sort</string>
    <string name="movie_poster_item">movie poster item</string>
</resources>
