<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_star_fav"
        android:title="@string/favorites" />
    <item
        android:id="@+id/action_popular"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/popular" />
    <item
        android:id="@+id/action_top_rated"
        android:enabled="true"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/top_rated" />
    <item
        android:id="@+id/action_upcoming"
        android:enabled="true"
        android:icon="@drawable/ic_movie_roll"
        android:title="@string/upcoming" />

</menu>