<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.amaslov.android.popularmovies.MovieDetailsActivity">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="@dimen/details_poster_width"
                android:layout_height="@dimen/details_poster_height"
                android:layout_marginLeft="@dimen/details_main_vertical"
                android:layout_marginStart="@dimen/details_main_vertical"
                android:layout_marginTop="@dimen/details_main_horizontal"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/inc_movie_overview"
                layout="@layout/layout_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

            <include
                android:id="@+id/inc_movie_trailers"
                layout="@layout/layout_movie_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="@dimen/details_main_height"
                android:layout_marginEnd="@dimen/details_main_vertical"
                android:layout_marginRight="@dimen/details_main_vertical"
                android:background="@drawable/layout_border_side"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_poster">

                <TextView
                    android:id="@+id/tv_date"
                    style="@style/movieDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/details_text_right"
                    android:layout_marginRight="@dimen/details_text_right"
                    android:layout_marginTop="@dimen/details_text_horizontal"
                    android:textSize="@dimen/details_date_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/tv_vote_average_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_title"
                    tools:text="2014-09-10" />

                <TextView
                    android:id="@+id/tv_date_title"
                    style="@style/movieDetailsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_label_left"
                    android:layout_marginStart="@dimen/details_label_left"
                    android:layout_marginTop="@dimen/details_label_horizontal"
                    android:text="@string/release_date"
                    app:layout_constraintBottom_toTopOf="@+id/tv_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Release date" />

                <TextView
                    android:id="@+id/tv_vote_average_title"
                    style="@style/movieDetailsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_label_horizontal"
                    android:text="@string/average_vote"
                    app:layout_constraintBottom_toTopOf="@+id/tv_average_vote_append"
                    app:layout_constraintStart_toStartOf="@+id/tv_date_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date"
                    tools:text="Average vote" />

                <TextView
                    android:id="@+id/tv_average_vote_append"
                    style="@style/movieDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_text_horizontal"
                    android:text="@string/vote_average_append"
                    app:layout_constraintBottom_toTopOf="@+id/tv_vote_count_label"
                    app:layout_constraintEnd_toEndOf="@+id/tv_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_title"
                    tools:text="7 / 10" />

                <TextView
                    android:id="@+id/tv_vote_count_label"
                    style="@style/movieDetailsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_label_horizontal"
                    android:text="@string/votes"
                    app:layout_constraintBottom_toTopOf="@+id/tv_vote_count"
                    app:layout_constraintStart_toStartOf="@+id/tv_vote_average_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_average_vote_append"
                    tools:text="Votes" />

                <TextView
                    android:id="@+id/tv_vote_count"
                    style="@style/movieDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/details_text_horizontal_2"
                    android:layout_marginTop="@dimen/details_text_horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_average_vote_append"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_count_label"
                    tools:text="7098" />

            </android.support.constraint.ConstraintLayout>

            <ImageButton
                android:id="@+id/ib_trailers"
                style="@style/detailsButtonsSelector"
                android:contentDescription="@string/trailers"
                app:layout_constraintEnd_toStartOf="@+id/ib_reviews"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintStart_toStartOf="@+id/ib_description"
                app:layout_constraintTop_toBottomOf="@+id/ib_description"
                app:srcCompat="@drawable/ic_movie_roll" />

            <ImageButton
                android:id="@+id/ib_description"
                style="@style/detailsButtonsSelector"
                android:layout_width="0dp"
                android:contentDescription="@string/description"
                app:layout_constraintEnd_toStartOf="@+id/ib_favorite"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                app:srcCompat="@drawable/ic_format_float_right" />

            <ImageButton
                android:id="@+id/ib_favorite"
                style="@style/detailsButtonsSelector"
                android:layout_width="0dp"
                android:contentDescription="@string/favorite"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toEndOf="@+id/ib_description"
                app:layout_constraintTop_toTopOf="@+id/ib_description"
                app:srcCompat="@drawable/ic_star_outline" />

            <ImageButton
                android:id="@+id/ib_reviews"
                style="@style/detailsButtonsSelector"
                android:contentDescription="@string/read_reviews"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toEndOf="@+id/ib_trailers"
                app:layout_constraintTop_toBottomOf="@+id/ib_description"
                app:srcCompat="@drawable/ic_forum" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</layout>


